infra/k8s/namespace.yaml
# Namespace dédié pour l’application Student Management
apiVersion: v1
kind: Namespace
metadata:
  name: student-management
